[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/player_controls.gd" type="Script" id=1]
[ext_resource path="res://Sprites/slime_r01.png" type="Texture" id=2]
[ext_resource path="res://Sprites/slime_r02.png" type="Texture" id=3]
[ext_resource path="res://Sprites/slime_r03.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 12.0

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 16.0

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]
_sections_unfolded = [ "Resource" ]

[sub_resource type="Animation" id=5]

length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ), Vector2( 0.5, 0.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 45.0, 90.0, 135.0 ]
}

[sub_resource type="Animation" id=6]

length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1 ]
}

[node name="PlayerRoot" type="Node2D" index="0" groups=[
"players",
]]

z_index = 2
_sections_unfolded = [ "Z Index" ]

[node name="PlayerKinematicBody" type="KinematicBody2D" parent="." index="0"]

input_pickable = false
collision_layer = 17
collision_mask = 20
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Angular", "Collision", "Linear", "collision" ]
WALK_SPEED = 96

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerKinematicBody" index="0"]

position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="PlayerCamera" type="Camera2D" parent="PlayerKinematicBody" index="1"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = 0
limit_top = 0
limit_right = 800
limit_bottom = 732
limit_smoothed = false
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Limit" ]

[node name="PlayerFallHitbox" type="Area2D" parent="PlayerKinematicBody" index="2"]

position = Vector2( 0, 1 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_mask = 8
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerKinematicBody/PlayerFallHitbox" index="0"]

shape = SubResource( 2 )

[node name="PlayerHitbox" type="Area2D" parent="PlayerKinematicBody" index="3"]

position = Vector2( 0, 2 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_mask = 8
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerKinematicBody/PlayerHitbox" index="0"]

shape = SubResource( 3 )

[node name="DamageTimer" type="Timer" parent="PlayerKinematicBody" index="4"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="AnimatedSprite" type="AnimatedSprite" parent="PlayerKinematicBody" index="5"]

scale = Vector2( 2, 2 )
frames = SubResource( 4 )
animation = "default"
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerKinematicBody" index="6"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/fallingAnim = SubResource( 5 )
anims/movingAnim = SubResource( 6 )
blend_times = [  ]

[node name="DamageFlashTimer" type="Timer" parent="PlayerKinematicBody" index="7"]

process_mode = 1
wait_time = 0.2
one_shot = false
autostart = false

[node name="ShootCooldown" type="Timer" parent="PlayerKinematicBody" index="8"]

process_mode = 1
wait_time = 0.8
one_shot = true
autostart = false

[node name="DashTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 0.4
one_shot = true
autostart = false

[connection signal="body_entered" from="PlayerKinematicBody/PlayerFallHitbox" to="PlayerKinematicBody" method="_on_PlayerFallHitbox_body_entered"]

[connection signal="body_entered" from="PlayerKinematicBody/PlayerHitbox" to="PlayerKinematicBody" method="_on_PlayerHitbox_body_entered"]

[connection signal="body_exited" from="PlayerKinematicBody/PlayerHitbox" to="PlayerKinematicBody" method="_on_PlayerHitbox_body_exited"]

[connection signal="timeout" from="PlayerKinematicBody/DamageTimer" to="PlayerKinematicBody" method="_on_DamageTimer_timeout"]

[connection signal="animation_finished" from="PlayerKinematicBody/AnimationPlayer" to="PlayerKinematicBody" method="_on_AnimationPlayer_animation_finished"]

[connection signal="timeout" from="PlayerKinematicBody/DamageFlashTimer" to="PlayerKinematicBody" method="_on_DamageFlashTimer_timeout"]

[connection signal="timeout" from="PlayerKinematicBody/ShootCooldown" to="PlayerKinematicBody" method="_on_ShootCooldown_timeout"]

[connection signal="timeout" from="DashTimer" to="PlayerKinematicBody" method="_on_DashTimer_timeout"]


